Fix style of compact mode and add on: search term: - Fix compact mode no longer has vertical gaps. - Add on: search term to find all users currently online on any app.

--- a/ui-webview/src/src/pages/AddressBookPage.css
+++ b/ui-webview/src/src/pages/AddressBookPage.css
@@ -102,6 +102,10 @@
     grid-template-columns: 1fr;
 }
 
+.individuals-grid.compact-mode {
+    row-gap: 0;
+}
+
 @media (min-width: 768px) {
     .individuals-grid {
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
